tidied up, checks OK running examples
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -5,4 +5,4 @@ import(spdep)
 
 export(get_trT, lndetcheb_in, mcdet_prep, mcdet_in)
 
-export(ml_sse_setup, do_LL)
+export(ml_env_setup, do_LL, sse_fn, J_fn)
