Added dependence on MASS (for multivariate normal) and msm (for truncated Normal).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@82 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2012-08-18
 Title: Bayesian spatial regression
 Author: Abhirup Mallik <abhirupkgp@gmail.com>, Virgilio Gomez Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
-Depends: R(>= 2.15.0), spdep
+Depends: R(>= 2.15.0), spdep, MASS, msm
 Description: Bayesian spatial regression with sparse matrices is a package
  to complement existing model fitting functions in spdep.
 License: GPL (>= 2)
