--- a/INLABMA/DESCRIPTION
+++ b/INLABMA/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: INLABMA
 Version: 0.1-1
 Date: 2013-04-30
+Encoding: latin1
 Title: Bayesian Model Averaging with INLA
 Author: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
 Maintainer: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>
