--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: INLABMA
-Version: 0.1-2
-Date: 2013-10-01
+Version: 0.1-3
+Date: 2013-10-03
 Encoding: latin1
 Title: Bayesian Model Averaging with INLA
 Author: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
 Maintainer: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>
-Depends: R(>= 2.15.0), spdep, multicore
+Depends: R(>= 2.15.0), spdep, parallel
 Suggests: INLA
 Description: Spatial Econometrics models using Bayesian Model Averaging 
  on models fitted with INLA.
