Minor fix in SE-utils.R to correct the precision in the SE models.
Hoe to obtain INLA has been added to the DESCRIPTION file.


git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@121 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -8,6 +8,7 @@ Maintainer: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>
 Depends: R(>= 2.15.0), spdep, parallel
 Suggests: INLA
 Description: Spatial Econometrics models using Bayesian Model Averaging 
- on models fitted with INLA.
+ on models fitted with INLA. The INLA package can be obtained from 
+ http://www.r-inla.org .
 License: GPL (>= 2)
 
