Minor changes. Version 0-1.4
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@123 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/INLABMA/NAMESPACE
+++ b/pkg/INLABMA/NAMESPACE
@@ -3,3 +3,6 @@ export(sem.inla, slm.inla, sdm.inla, leroux.inla)
 export(logprrho, rescalemarg)
 
 export(mysplinefun, BMArho, INLABMA)
+
+import(spdep)
+
