--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: INLABMA
-Version: 0.1-5
-Date: 2014-07-01
+Version: 0.1-6
+Date: 2015-01-18
 Encoding: latin1
 Title: Bayesian Model Averaging with INLA
-Author: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
-Maintainer: Virgilio Gomez Rubio <virgilio.gomez@uclm.es>
-Depends: R(>= 2.15.0), parallel
+Author: Virgilio Gomez-Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
+Maintainer: Virgilio Gomez-Rubio <virgilio.gomez@uclm.es>
+Depends: R(>= 2.15.0), parallel, sp
 Imports: Matrix, spdep
 Suggests: INLA
 Description: Spatial Econometrics models using Bayesian Model Averaging 
@@ -14,4 +14,5 @@ Description: Spatial Econometrics models using Bayesian Model Averaging
  downloaded by running:
   source("http://www.math.ntnu.no/inla/givemeINLA-testing.R")
 License: GPL (>= 2)
+Additional_repositories: http://www.math.ntnu.no/inla/R/stable
 
