--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -3,8 +3,8 @@ Version: 0.1-6
 Date: 2015-01-18
 Encoding: latin1
 Title: Bayesian Model Averaging with INLA
-Author: Virgilio Gomez-Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
-Maintainer: Virgilio Gomez-Rubio <virgilio.gomez@uclm.es>
+Author: Virgilio Gómez-Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
+Maintainer: Virgilio Gómez-Rubio <virgilio.gomez@uclm.es>
 Depends: R(>= 2.15.0), parallel, sp
 Imports: Matrix, spdep
 Suggests: INLA
