INLAMH and sac.inla have been added.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@159 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/INLABMA/NAMESPACE
+++ b/pkg/INLABMA/NAMESPACE
@@ -1,8 +1,10 @@
-export(sem.inla, slm.inla, sdm.inla, leroux.inla)
+export(sem.inla, slm.inla, sdm.inla, sac.inla, leroux.inla)
 
 export(logprrho, rescalemarg)
 
 export(mysplinefun, BMArho, INLABMA)
+
+export(INLAMH)
 
 import(parallel)
 import(sp)
