--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: INLABMA
-Version: 0.1-6
-Date: 2015-01-18
+Version: 0.1-7
+Date: 2017-02-01
 Encoding: latin1
 Title: Bayesian Model Averaging with INLA
 Author: Virgilio Gómez-Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
@@ -15,4 +15,4 @@ Description: Spatial Econometrics models using Bayesian Model Averaging
   source("http://www.math.ntnu.no/inla/givemeINLA-testing.R")
 License: GPL (>= 2)
 Additional_repositories: http://www.math.ntnu.no/inla/R/stable
-
+RoxygenNote: 6.0.0
