--- a/pkg/INLABMA/NAMESPACE
+++ b/pkg/INLABMA/NAMESPACE
@@ -10,3 +10,5 @@ import(parallel)
 import(sp)
 import(spdep)
 
+importFrom("stats", "as.formula", "dnorm", "integrate", "model.matrix",
+             "runif", "splinefun", "update")
