--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: INLABMA
-Version: 0.1-10
-Date: 2017-03-22
+Version: 0.1-11
+Date: 2018-07-26
 Encoding: latin1
 Title: Bayesian Model Averaging with INLA
 Author: Virgilio Gómez-Rubio <virgilio.gomez@uclm.es>, Roger Bivand <Roger.Bivand@nhh.no>
@@ -12,4 +12,4 @@ Description: Fit Spatial Econometrics models using Bayesian model averaging
   on models fitted with INLA. The INLA package can be obtained from 
   <http://www.r-inla.org>. 
 License: GPL (>= 2)
-Additional_repositories: http://www.math.ntnu.no/inla/R/stable
+Additional_repositories:  https://inla.r-inla-download.org/R/stable
