quantile added to NAMESPACE. Repo update.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@169 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/INLABMA/DESCRIPTION
+++ b/pkg/INLABMA/DESCRIPTION
@@ -12,4 +12,5 @@ Description: Fit Spatial Econometrics models using Bayesian model averaging
   on models fitted with INLA. The INLA package can be obtained from 
   <http://www.r-inla.org>. 
 License: GPL (>= 2)
-Additional_repositories:  https://inla.r-inla-download.org/R/stable
+Additional_repositories: https://inla.r-inla-download.org/R/stable
+RoxygenNote: 6.0.1
