--- a/pkg/INLABMA/NAMESPACE
+++ b/pkg/INLABMA/NAMESPACE
@@ -11,4 +11,4 @@ import(sp)
 import(spdep)
 
 importFrom("stats", "as.formula", "dnorm", "integrate", "model.matrix",
-             "runif", "splinefun", "update")
+             "runif", "splinefun", "update", "quantile")
